fix: sticky search alignment

--- a/app/design/frontend/HumanElement/stover_default/Amasty_MegaMenu/web/css/source/_module_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/Amasty_MegaMenu/web/css/source/_module_extend.less
@@ -310,7 +310,7 @@
             border-top: @ammenu-search-border;
             border-bottom: @ammenu-search-border;
             &.search-active {
-                top: 147px;
+                top: 155px; 
             }
         }
     }
